--- a/painCalculator.css
+++ b/painCalculator.css
@@ -59,5 +59,5 @@ input {
     color: rgb(87, 62, 17);
     position: absolute;
     left: 500;
-    cursor: url(file:///Users/kathytran/Documents/I%20Want%20to%20Play%20With%20Code/Pain%20Calculator/shrinkzenicursorpointer.png) 2 2, text;
+    cursor: url(file:///Users/kathytran/Documents/I%20Want%20to%20Play%20With%20Code/Pain%20Calculator/shrinkzenicursorpointer.png) 2 2, auto;
 }
